--- a/packages/codegen/src/react/generators/readme/templates/README.md.hbs
+++ b/packages/codegen/src/react/generators/readme/templates/README.md.hbs
@@ -78,6 +78,7 @@ If you need help with setting up the boilerplate or have other questions - don't
 - [✨ Hook Usage Examples](#️-hook-usage-examples)
   - [1. Provide params directly to the hook](#1-provide-params-directly-to-the-hook)
   - [2. Provide params to the fetch()](#2-provide-params-to-the-fetch)
+  - [3. Provide fetching options](#3-provide-fetching-options)
 {{#each hookLinks}}
 {{ this.group }}
   {{#each this.links}}
@@ -162,11 +163,10 @@ const App = () => {
 }
 ```
 
-## 3. Provide extra fetching data options
-It's possible to set fallbacks or change settings of data fetching per hook:
+## 3. Provide fetching options
+It's possible to set fallbacks or change settings of data fetching per hook. These options will override `config` provided to `MoralisProvider`.
 
 ```jsx
-import { useState } from 'react';
 import { useEvmNativeBalance } from '@moralisweb3/react'
 import { EvmChain } from 'moralis/common-evm-utils';
 
