added readmi new links

--- a/packages/codegen/src/react/generators/readme/templates/README.md.hbs
+++ b/packages/codegen/src/react/generators/readme/templates/README.md.hbs
@@ -85,7 +85,9 @@ If you need help with setting up the boilerplate or have other questions - don't
   {{ this }}
   {{/each}}
 {{/each}}
-- [⚙️ Advanced Config](#️-hook-advanced-config)
+- [⚙️ Advanced Config](#️-advanced-config)
+  - [Moralis instance config](#moralis-instance-config)
+  - [Data fetching config](#data-fetching-config)
 - [📦 Webpack v5 support](#️-webpack-v5-support)
   - [Configuring Webpack v5](#configuring-webpack-v5)
   - [create-react-app](#create-react-app)
