--- a/demos/react-vite/src/App.css
+++ b/demos/react-vite/src/App.css
@@ -1,13 +1,13 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
+  max-width: 800px;
   padding: 2rem;
-  text-align: center;
+  width: 100%;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
+  height: 5em;
+  padding: 0 1em;
   will-change: filter;
   transition: filter 300ms;
 }
@@ -17,6 +17,9 @@
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
+.logo.moralis {
+  height: 6em;
+}
 .logo.moralis:hover {
   filter: drop-shadow(0 0 2em #1df7f7);
 }
@@ -25,9 +28,66 @@
   padding: 1em;
 }
 
-.v_stack {
+footer {
+  margin-top: 2em;
+  color: #a09f9f;
+  text-align: center;
 }
 
-.read-the-docs {
-  color: #888;
+.form-input {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.search_btn {
+  position: absolute;
+  right: 0;
+  border-radius: 0;
+  border-top-right-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
+  padding: 0 1.2em;
+  height: 100%;
+}
+
+pre {
+  background-color: #19212c;
+  padding: 1em;
+  border-radius: 0.375rem;
+}
+
+.form-input input {
+  background-color: #19212c;
+  border-radius: 0.375rem;
+  border: 1px solid rgba(255, 255, 255, 0.16);
+  line-height: 1.5;
+  box-sizing: border-box;
+  color: white;
+  font-weight: 400;
+  font-size: 16px;
+  transition: all 0.1s ease-in-out;
+  padding: 0 16px;
+  width: 100%;
+  height: 40px;
+}
+
+.form-input input:focus {
+  border-color: #63b3ed;
+  padding: 0 15px;
+  border-width: 2px;
+  outline: none;
+}
+
+.form-input .hint {
+  font-size: 0.8rem;
+  opacity: 0.6;
+}
+
+.form-input label {
+  display: inline-block;
+  margin-bottom: 0.5em;
+}
+
+.header {
+  text-align: center;
 }
