--- a/packages/codegen/src/react/generators/hooks/templates/hook.ts.hbs
+++ b/packages/codegen/src/react/generators/hooks/templates/hook.ts.hbs
@@ -4,18 +4,18 @@ import { useMemo } from 'react';
 import { UseMoralisQueryParams } from '../../types';
 import { {{ useResolver }}, useQuery } from '../../utils';
 
-export type {{ hookParamsType }} = UseMoralisQueryParams<{{ responseType }}, {{ requestType }}>
+export type {{ hookParamsType }} = UseMoralisQueryParams<{{ responseType }}{{#if isNullable}}| null{{/if}}, {{ requestType }}>
 
 export function {{ this.name }}({ {{#if allParams}}{{#each allParams}}{{ this }},{{/each}}{{/if}} ...queryParams }: {{ hookParamsType }} = {}) {
   const resolver = {{ useResolver }}({{ operation }}, Moralis.{{ module }}.baseUrl);
 
   const queryKey: [string, {{ requestType }}] | undefined = useMemo(() => {
     {{#if requiredParams}}
-    if ({{#each requiredParams}}{{ this }} {{#unless @last}}&&{{/unless}}{{/each}}) {
+    if ({{#each requiredParams}}{{ this }}{{#unless @last}} &&{{/unless}}{{/each}}) {
       return [
       {{ operation }}.id,
       {
-        {{#each allParams}}{{ this }}{{#unless @last}},{{/unless}}{{/each}}
+        {{#each allParams}}{{ this }}{{#unless @last}}, {{/unless}}{{/each}}
       },
     ];
     }
@@ -24,17 +24,21 @@ export function {{ this.name }}({ {{#if allParams}}{{#each allParams}}{{ this }}
       return [
       {{ operation }}.id,
         {
-          {{#if allParams}}{{#each allParams}}{{ this }}{{#unless @last}},{{/unless}}{{/each}}{{else}}{}{{/if}}
+          {{#if allParams}}{{#each allParams}}{{ this }}{{#unless @last}}, {{/unless}}{{/each}}{{/if}}
         },
       ]
     {{/if}}
-  }, [{{#if allParams}}{{#each allParams}}{{ this }}{{#unless @last}},{{/unless}}{{/each}}{{/if}}]);
+  }, [{{#if allParams}}{{#each allParams}}{{ this }}{{#unless @last}}, {{/unless}}{{/each}}{{/if}}]);
 
   return useQuery({
     queryKey,
     queryFn: async ({ queryKey: [_id, request] }) => {
-      const { result } = await resolver.fetch(request);
-      return result;
+      const response = await resolver.fetch(request);
+      {{#if isNullable}}
+      return response?.result || null;
+      {{else}}
+      return response.result;
+      {{/if}}
     },
     ...queryParams,
     enabled: queryKey && queryParams.enabled,
