--- a/packages/codegen/src/react/generators/readme/templates/README.md.hbs
+++ b/packages/codegen/src/react/generators/readme/templates/README.md.hbs
@@ -122,6 +122,7 @@ const App = () => {
     isFetchedAfterMount,
     isFetching,
     isLoading,
+    isPreviousData,
     isRefetching,
     isSuccess,
     refetch,
